@@ -3377,6 +3377,23 @@ test(1143.2, abs(te1-te2) < 1, TRUE)
 DT <- data.table(x=c(1,1,1,2,2), y=factor(letters[1:5]))
 test(1144, DT[, z := y, by=x], data.table(x=c(1,1,1,2,2), y=factor(letters[1:5]), z=1:5))
 
+# FR #2356 - retain names of named vector as column with keep.rownames=TRUE
+x <- 1:5
+setattr(x, 'names', letters[1:5])
+test(1144.1, as.data.table(x, keep=TRUE), data.table(rn=names(x), x=unname(x)))
+x <- as.numeric(x)
+setattr(x, 'names', letters[1:5])
+test(1144.2, as.data.table(x, keep=TRUE), data.table(rn=names(x), x=unname(x)))
+x <- as.character(x)
+setattr(x, 'names', letters[1:5])
+test(1144.3, as.data.table(x, keep=TRUE), data.table(rn=names(x), x=unname(x)))
+x <- as.factor(x)
+setattr(x, 'names', letters[1:5])
+test(1144.4, as.data.table(x, keep=TRUE), data.table(rn=names(x), x=unname(x)))
+x <- as.Date(1:5, origin="2013-01-01")
+setattr(x, 'names', letters[1:5])
+test(1144.5, as.data.table(x, keep=TRUE), data.table(rn=names(x), x=unname(x)))
+
 # tests of freading classes like Date and the verbose messages there.
 # Test mid read bump of logical T/F to character, collapse back to T and F.
 
