@@ -127,7 +127,10 @@ NEW FEATURES
 
   o  FR #2551 is now implemented. `:=` coerces without warning when precision is not lost and length(RHS) = 1. 
      For example: DT = data.table(x=1:2, y=c(TRUE, FALSE)); DT[1, x:=1] and DT[1, y:=0] and DT[1, y:=0L] all 
-	 don't issue a warning as long as precision is not lost (coercion is done silently).
+     don't issue a warning as long as precision is not lost (coercion is done silently).
+
+  o  as.data.table.*(x, keep.rownames=TRUE), where `x` is a named vector now adds names of `x` into a new column 
+     with default name `rn`. Thanks to Garrett See for this FR #2356.
 
 BUG FIXES
 
